change compose file to staging directory

--- a/pw/docker-compose.test.yml
+++ b/pw/docker-compose.test.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: ./Dockerfile
       args:
        - PW_VER=$VERSION
-    image: tob123/piwigo:${VERSION}
+    image: tob123/piwigo-staging:${VERSION}
     networks:
       front:
       back:
