--- a/pw/httpd-pw.conf
+++ b/pw/httpd-pw.conf
@@ -6,4 +6,5 @@ Require all granted
   AllowOverride None
   Require all granted
 </Directory>
+SetEnvIfNoCase X-Forwarded-Proto "https" HTTPS=on
 </VirtualHost>
