correct anchore command for evaluation check

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ script:
 #  - docker exec ac_anchore-engine_1 anchore-cli evaluate check docker.io/tob123/piwigo-staging:${VERSION}
   - anchore-cli image add docker.io/tob123/piwigo-staging:${VERSION} 
   - anchore-cli image wait docker.io/tob123/piwigo-staging:${VERSION} 
-  - anchore-cli image evaluate docker.io/tob123/piwigo-staging:${VERSION} 
+  - anchore-cli evaluate check docker.io/tob123/piwigo-staging:${VERSION} 
 deploy:
   provider: script
   script: bash dockcompare.sh
