--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ env:
   matrix:
   - VERSION=2.10.1 LATEST_MINOR=true LATEST=true
 before_install:
-  - sudo apt-get install -y pwgen
+  - sudo apt-get install -y pwgen python3-pip
   - |
     if docker pull tob123/piwigo:${VERSION}; then
       echo "docker pull is allowed to fail"
